added underline to current page in menu

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,9 @@ nav ul li:hover {
     background: rgba(37, 35, 94,1);
     cursor: pointer;
 }
+.current {
+  text-decoration: underline;
+}
 
 #img-frame{
     width: 150px;
