--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ html, body{
   background-color: white;
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
+  height: 100vh;
 }
 body{
   position: relative;
