fixed menu withdrawl animation

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,7 @@ nav ul {
     opacity: 0;
     flex-direction: column;
     z-index: 1;
-    transition: transform .5s;
+    transition: all .5s;
 }
 nav ul.nav-open{
   transform: translateX(0);
