--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ nav ul li:hover {
     height: 150px;
     background-size: cover;
     background-position: 90% 0;
-    background-image:url('Profile.jpg');
+    background-image:url('Profile.png');
     border-radius: 50%;
     margin: auto;
 
