--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
   position: relative;
 }
 p{
-  font-size: 1em;
+  font-size: 1rem;
   font-family: 'Nunito', sans-serif;
 }
 nav{
@@ -27,10 +27,10 @@ nav{
   align-items: center;
 }
 #titlebar{
-  font-size: 1.2em;
+  font-size: 1.2rem;
   font-weight: bold;
-  padding: .5em;
-  padding-left: 1em;
+  padding: .5rem;
+  padding-left: 1rem;
 
 }
 
@@ -42,8 +42,8 @@ a{
 nav i {
     display: flex;
     place-content: center;
-    font-size: 1.5em;
-    padding-right: .5em;
+    font-size: 1.5rem;
+    padding-right: .5rem;
 }
 
 .ex {
@@ -73,7 +73,7 @@ nav ul {
     list-style: none;
     position: absolute;
     display: flex;
-    top: 47px;
+    top: 2.5rem;
     right: 0;
     transform: translateX(300px);
     width: 50%;
@@ -93,14 +93,14 @@ nav ul.nav-open{
 
 }
 nav ul i {
-    font-size: 2em;
-    padding: 1em;
+    font-size: 2rem;
+    padding: 1rem;
 }
 nav ul i:hover {
     cursor: pointer;
     }
 nav ul li {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     width: 100%;
     padding: 1em;
     display: grid;
@@ -129,20 +129,20 @@ nav ul li:hover {
 
   color: #4c4c4c;
   border-radius: 30px;
-  padding: 2em;
+  padding: 2rem 2rem 0 2rem;
 
   display: flex;
+  flex-direction: column;
   place-content: center;
 }
 
 #links {
     text-align: center;
-    padding-top: 1em;
+    padding-top: 1rem;
 }
 
 #projects{
   font-size: 1em;
-  margin-top: 2em;
   color: #4c4c4c;
   text-align: center;
   display: flex;
@@ -155,8 +155,8 @@ nav ul li:hover {
   padding: 0;
   height: 285px;
   width: 250px;
-  margin: 2em;
-  border-radius: 2em;
+  margin: 2rem;
+  border-radius: 2rem;
   box-shadow: 5px 5px 10px rgba(0,0,0,.1);
   background: rgba(15,14,38,1);
   color: white;
@@ -171,51 +171,59 @@ nav ul li:hover {
 
 .project-img {
   background: gray;
-  border-top-left-radius: 2em;
-  border-top-right-radius: 2em;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
   width: 100%;
   background-size: cover;
   
 }
 
 .project-desc {
-  padding: 0 1em;
-  font-size: .9em;
-
+  padding: 0 1rem;
+  font-size: .9rem;
+}
+.project-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
 }
-.project-desc h3 {
-  margin: .5em 0;
+.project-title h3 {
+  margin: .5rem 0;
 }
 .project-desc p {
-  margin-top: .5em;
+  margin-top: .5rem;
 }
 
 #profile-pic {
     background-image: "../Profile.jpg"
 }
 .text-tile{
-  font-size: 1em;
-  line-height: 1.6em;
-  padding: 1em;
+  font-size: 1rem;
+  line-height: 1.6rem;
+  padding: 0 1rem;
+  max-width: 750px;
+  margin: 0 auto;
 
 }
 .text-tile h1{
-    font-size: 1.5em;
-    line-height: 1.1em;
-}
-.text-tile p{
-    margin-bottom: 1.5em;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
 }
 .text-tile a {
-    font-size: 2em;
-    padding: .5em;
+    font-size: 2rem;
+    padding: .5rem;
     color: #4c4c4c;
     text-align: center;
+
 }
 ul {
   text-align: left;
 }
+li p {
+  margin: 1rem;
+}
+
 
 @media (min-width:600px){
 
@@ -229,7 +237,7 @@ nav ul {
     background: none;
     display: flex;
     flex-direction: row;
-    font-size: .7em;
+    font-size: .rem;
     transform: translateX(0);
     opacity: 1;
 
@@ -239,6 +247,7 @@ nav ul.nav-open{
 }
 nav ul li {
     width: auto;
+    font-size: 1.2rem;
 }
 nav i {
     display: none;
@@ -249,21 +258,21 @@ nav i {
 @media (min-width: 900px){
 
   .primary-section{
-    padding: 5em;
+    padding: 5rem 5rem 1rem 5rem;
   }
   .text-tile h1{
-    font-size: 2em;
-    margin-bottom:2em;
+    font-size: 2rem;
+    margin-bottom:2rem;
   }
-  .text-tile p{
-    font-size: 1.4em;
-    line-height: 1.5em;
+  .text-tile{
+    font-size: 1.4rem;
   }
   .project-tile {
     height: 350px;
     width: 350px;
     font-size: 1.2em;
   }
-
-
+  nav ul li {
+    font-size: 1.5rem;
+  }
 }
