--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ html, body{
 }
 body{
   position: relative;
+  -ms-overflow-style: none;  /* IE no vert scrollbar*/
+  scrollbar-width: none;  /* Firefox no vert scrollbar */
+}
+/*remove vertical scrollbar*/
+body::-webkit-scrollbar {
+  display: none;
 }
 p{
   font-size: 1rem;
