updated profile img to .webp

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ nav ul li:hover {
     height: 150px;
     background-size: cover;
     background-position: 90% 0;
-    background-image:url('Profile.png');
+    background-image:url('Profile.webp');
     border-radius: 50%;
     margin: auto;
 
