box-shadow adjustments on tiles

--- a/src/App.css
+++ b/src/App.css
@@ -162,23 +162,23 @@ nav ul li:hover {
   height: 285px;
   width: 250px;
   margin: 2rem;
-  border-radius: 2rem;
-  box-shadow: 5px 5px 10px rgba(0,0,0,.1);
+  border-radius: 32px;
+  box-shadow: 10px 10px 10px 0px rgba(0,0,0,.1);
   background: rgba(15,14,38,1);
   color: white;
   transition: .2s ease-out;
   position: relative;
+  overflow: hidden;
   
 }
 .project-tile:hover{
   transform: scale(1.1);
   transition: .2s ease-out;
+  box-shadow: 5px 5px 10px 5px rgba(0,0,0,.1);
 }
 
 .project-img {
   background: gray;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
   width: 100%;
   background-size: cover;
 }
