--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,7 @@ nav ul li:hover {
   margin: 2rem;
   border-radius: 32px;
   box-shadow: 10px 10px 10px 0px rgba(0,0,0,.1);
-  background: rgba(15,14,38,1);
+  
   color: white;
   transition: .2s ease-out;
   position: relative;
@@ -178,29 +178,32 @@ nav ul li:hover {
 }
 
 .project-img {
-  background: gray;
-  width: 100%;
+  height: 60%;
   background-size: cover;
+  background-position: center;
 }
 
 .project-desc {
+  height: 40%;
   padding: 0 1rem;
   font-size: .9rem;
+  background: rgba(15,14,38,1);
 }
 .project-title {
   font-size: 1.2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 .25rem;
+  padding: 0.25rem;
 
 }
 .project-title h3 {
-  font-size: 1.1rem;
+  font-size: 1rem;
   margin: .5rem 0;
 }
 .project-desc p {
   margin-top: .5rem;
+  font-size: .75rem;
 }
 
 #profile-pic {
@@ -276,11 +279,17 @@ nav i {
     font-size: 1.4rem;
   }
   .project-tile {
-    height: 350px;
+    height: 400px;
     width: 350px;
-    font-size: 1.2em;
   }
   nav ul li {
     font-size: 1.5rem;
   }
+  .project-desc p {
+    font-size: 1rem;
+  }
+  .project-title h3 {
+    font-size: 1.1rem;
+  }
 }
+
