skills cards added

--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,22 @@ ul {
 li p {
   margin: 1rem;
 }
-
+.flex-cards {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.skills-card {
+  color: white;
+  width: 275px;
+  height: 275px;
+  margin: 1rem .5rem;
+  background: rgba(15,14,38,1);
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  line-height: 2.5rem;
+}
 
 @media (min-width:600px){
 
@@ -289,6 +304,9 @@ nav i {
     font-size: 1rem;
   }
   .project-title h3 {
+    font-size: 1.1rem;
+  }
+  .skills-card h3 {
     font-size: 1.1rem;
   }
 }
