--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,11 @@ li p {
 
 @media (min-width:600px){
 
+p {
+  font-size: 1.25rem;
+  line-height: 1.6;
+}
+
 nav ul {
     list-style: none;
     position: relative;
