--- a/src/App.css
+++ b/src/App.css
@@ -117,7 +117,7 @@ nav ul {
     right: 0;
     transform: translateX(300px);
     width: 50%;
-    background: rgba(15,14,38,1);
+    background: var(--project-tile);
     margin: 0;
     padding-left: 0;
     opacity: 0;
