--- a/src/assets/css/profilePic.css
+++ b/src/assets/css/profilePic.css
@@ -1,10 +1,14 @@
 #img-frame {
     width: 200px;
     height: 200px;
-    background-size: cover;
-    background-position: 90% 0;
-    background-image:url('../../assets/images/Profile.webp');
     border-radius: 50%;
+    overflow: hidden;
     border: 2px solid var(--foreground);
     margin: auto;
+}
+#img-frame img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: right;
 }
